Code linting, fix duplicate bloating